Localization added to the module trmplate

--- a/CSharp/VirtoCommerce.Module.Template/Web/Localizations/en.module.json
+++ b/CSharp/VirtoCommerce.Module.Template/Web/Localizations/en.module.json
@@ -1,10 +1,9 @@
 {
-    "$ext_safeprojectnamecamel": {
-        "blades": {
-            "hello-world": {
-                "title": "Hello world blade"
-            }
-        }
+  "$ext_safeprojectnamecamel$": {
+    "blades": {
+      "hello-world": {
+        "title": "Hello world blade"
+      }
     }
-}
+  }
 }
